@@ -11,6 +11,7 @@
 + [ oval-Bugs-2922034 ] added support for constraints specified for method parameters at interface level: @Guard(inspectInterfaces=true) (thanks to Chris Pheby) 
 - fixed a potential null reference (thanks to jacky163com)
 * upgraded to Paranamer 2.2.1, MVEL 2.0.18, Groovy 1.7.4, Spring 3.0.4.RELEASE, JRuby 1.5.2, AspectJ 1.6.9, SLF4J 1.6.1
++ Validator now eagerly checks Java SecurityManager configuration for suppressAccessChecks ReflectionPermission during instantiation
 
 2010-03-29 v1.50
 ================
